--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-markdown": "^2.2.4",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
