--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.5",
     "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-markdown": "^2.2.4",
